--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,6 @@ pillow==8.4.0
 lvis
 nltk
 cog
-# git+https://github.com/openai/CLIP.git
+stanza
+transformers==4.31.0
+git+https://github.com/openai/CLIP.git
